NXT-3995: Consistent wording and punctuation of messages
- instead of constructing with a single-element list, use the constructor with the String argument
- If printing exception message, print it as a separate detail instead of being embedded into detail sentence like "an error occured while doing X: <exception message>"
- Make sure all details sentences end with a period.
- Avoid contractions such as “couldn’t”, instead spell out “could not”.
- If reporting failure, phrase it as “Failed to catch kittens” instead of “Could not catch kittens” or “An error occured while catching kittens”.

(NXT-3995) Review wording of error messages